--- a/web/web-app/src/index.html
+++ b/web/web-app/src/index.html
@@ -5,6 +5,9 @@
         <title>STRIDE & SERVE</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
         <link rel="preconnect" href="https://primefaces.org" />
         <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png" />
         <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet" />
